--- a/media_capture.html
+++ b/media_capture.html
@@ -13,33 +13,34 @@
             <div class="media-buttons">
                 <button onclick="captureVideo()">Capture Video</button>
             </div>
-            <form id="mediaForm" action="media_capture.php" method="post" enctype="multipart/form-data">
+            <form id="mediaForm" action="app/handle_upload.php" method="post" enctype="multipart/form-data">
                 <input type="file" id="mediaInput" name="media" accept="video/*" style="display:none">
                 <div class="media-preview">
                     <video id="videoPreview" controls style="display:none"></video>
                 </div>
+                <button type="submit" id="submitButton" style="display:none">Upload Video</button>
             </form>
             <button class="view-media-button" onclick="window.location.href='view_media.html'">View Captured Media</button>
             <button class="back-button" onclick="window.location.href='dashboard.html'">Back to Dashboard</button>
-            <button class="back-button" onclick="history.back()">Back</button>
         </div>
     </div>
     <script>
         function captureVideo() {
             const mediaInput = document.getElementById('mediaInput');
-            mediaInput.accept = 'video/*';
-            mediaInput.capture = 'environment';
             mediaInput.click();
-            mediaInput.onchange = (e) => {
-                const file = e.target.files[0];
-                if (file) {
-                    const videoPreview = document.getElementById('videoPreview');
-                    videoPreview.style.display = 'block';
-                    videoPreview.src = URL.createObjectURL(file);
-                    document.getElementById('mediaForm').submit();
-                }
-            };
         }
+
+        document.getElementById('mediaInput').addEventListener('change', function(e) {
+            const file = e.target.files[0];
+            if (file) {
+                const videoPreview = document.getElementById('videoPreview');
+                videoPreview.style.display = 'block';
+                videoPreview.src = URL.createObjectURL(file);
+                
+                // Show the submit button
+                document.getElementById('submitButton').style.display = 'block';
+            }
+        });
     </script>
 </body>
 </html>
